# convertflac

./: .commitlintrc.yml  .editorconfig  .gitignore  .gitignore_custom  .jscpd.json  .lintstagedrc.yml  .markdownlint.yml  .markdownlintignore  .prettierignore  .releaserc.yml  .secretlintrc.yml  .tool-versions  .vale.ini  .yamllint.yml  LICENSE  Makefile  Pipfile  README.md  hatch.toml  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: general-issue-beta.yml  general-issue.md
.github/vale_styles/Vocab/Base/: accept.txt
.github/workflows/: dependabot.yml  lint-pr-title.yml  release.yml  reviewdog.yml  test.yml
.husky/: commit-msg
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  _config.yml
report/: jscpd-report.md
src/convertflac/: main.py  version_getter.py
